Some roms and emulators for testing (use only if you have rights)

--- a/data/emulators/Fusion.ini
+++ b/data/emulators/Fusion.ini
@@ -100,20 +100,20 @@ Mode320x480=640,480,60,100,640,480
 ; File History
 ;---------------------------------
 
-FileHistory0=C:\retromania\roms\mastersystem\Super Wonder Boy.sms
-FileHistory1=data\roms\Sega Mega Drive\Flashback - The Quest for Identity (E) [!].gen
-FileHistory2=data\roms\Sega Mega Drive\Batman Forever (World).md
-FileHistory3=data\roms\Sega Mega Drive
-FileHistory4=data\roms\Sega Mega DriveBatman Forever (World).md
-FileHistory5=data\roms\Sega
-FileHistory6=..\..\data\roms\Sega
-FileHistory7=data/roms/Sega
-FileHistory8=data\roms\Sega Mega Drive\Jungle Strike (UE) [!].gen
-FileHistory9=C:\Users\Sir_Leon\Desktop\RetroPie-Project\Retro-End\repository\data\roms\Sega Mega Drive\Sonic The Hedgehog (W) (REV00) [!].gen
-FileHistoryA=
-FileHistoryB=
-FileHistoryC=
-FileHistoryD=
+FileHistory0=data\roms\Sega Mega Drive\Batman Forever (World).md
+FileHistory1=data\roms\Sega Mega Drive\Simpsons, The - Bart Vs The Space Mutants (USA, Europe).md
+FileHistory2=data\roms\Sega Mega Drive\Star Wars Arcade (32X) (E) [!].32x
+FileHistory3=data\roms\Sega Mega Drive\Metal Head (32X) (E) (M2) [!].32x
+FileHistory4=data\roms\Sega Mega Drive\Final Fantasy (R).gen
+FileHistory5=C:\retromania\roms\mastersystem\Super Wonder Boy.sms
+FileHistory6=data\roms\Sega Mega Drive\Flashback - The Quest for Identity (E) [!].gen
+FileHistory7=data\roms\Sega Mega Drive
+FileHistory8=data\roms\Sega Mega DriveBatman Forever (World).md
+FileHistory9=data\roms\Sega
+FileHistoryA=..\..\data\roms\Sega
+FileHistoryB=data/roms/Sega
+FileHistoryC=data\roms\Sega Mega Drive\Jungle Strike (UE) [!].gen
+FileHistoryD=C:\Users\Sir_Leon\Desktop\RetroPie-Project\Retro-End\repository\data\roms\Sega Mega Drive\Sonic The Hedgehog (W) (REV00) [!].gen
 FileHistoryE=
 FileHistoryF=
 ShortenHistoryNames=0
