Now SDL quit and restart between games launch Added Check for new games on start Added Check for removed games on start Added a setting to specify the Supported Extencion to check Added PopupMessage Enum for messages icons Added connection errors handling for scraper Explicitized SettingsdController Type Now remove on Game model delete even the game's files Added Favorite and TimePlayes in Game model Added starting Delay to Animations Fixed baseview global opacity / color opacity problem Added cartridge animation on game launch Updated icons

--- a/data/emulators/Fusion.ini
+++ b/data/emulators/Fusion.ini
@@ -14,7 +14,7 @@ EnhancedGFXOpt=0
 ForceFullScreen32=0
 VistaAeroIgnore=0
 VistaNoWndVSync=1
-DebugFlags=0,0,2,2
+DebugFlags=0,0,0,0
 
 ;---------------------------------
 ; Sound Compatibility Options
@@ -46,10 +46,10 @@ GameGearZoom=0
 ; MegaDrive/Genesis Specific
 ;---------------------------------
 
-LastGenesisROM=C:\Users\Sir_Leon\Desktop\RetroPie-Project\Retro-End\repository\data\emulators\
-SRMFiles=C:\Users\Sir_Leon\Desktop\RetroPie-Project\Retro-End\repository\data\emulators
-StateFiles=C:\Users\Sir_Leon\Desktop\RetroPie-Project\Retro-End\repository\data\emulators
-PatchFiles=C:\Users\Sir_Leon\Desktop\RetroPie-Project\Retro-End\repository\data\emulators
+LastGenesisROM=C:\Users\Sir_Leon\Desktop\RetroPie-Project\Retro-End\repository\data\saves
+SRMFiles=C:\Users\Sir_Leon\Desktop\RetroPie-Project\Retro-End\repository\data\saves
+StateFiles=C:\Users\Sir_Leon\Desktop\RetroPie-Project\Retro-End\repository\data\saves
+PatchFiles=C:\Users\Sir_Leon\Desktop\RetroPie-Project\Retro-End\repository\data\saves
 GenesisBIOS=
 AutoChecksums=0
 GenBorderDisable=0
@@ -67,7 +67,7 @@ DefaultDrive=X:X:X None
 CDReadAhead=4
 CD+GMode=0
 ForceASPI=0
-BRMFiles=C:\Users\Sir_Leon\Desktop\RetroPie-Project\Retro-End\repository\data\emulators
+BRMFiles=C:\Users\Sir_Leon\Desktop\RetroPie-Project\Retro-End\repository\data\saves
 BRMPerGame=1
 LEDEnabled=1
 PerfectSync=0
@@ -101,21 +101,21 @@ Mode320x480=640,480,60,100,640,480
 ;---------------------------------
 
 FileHistory0=data\roms\Sega Mega Drive\Batman Forever (World).md
-FileHistory1=data\roms\Sega Mega Drive\Simpsons, The - Bart Vs The Space Mutants (USA, Europe).md
-FileHistory2=data\roms\Sega Mega Drive\Star Wars Arcade (32X) (E) [!].32x
-FileHistory3=data\roms\Sega Mega Drive\Metal Head (32X) (E) (M2) [!].32x
-FileHistory4=data\roms\Sega Mega Drive\Final Fantasy (R).gen
-FileHistory5=C:\retromania\roms\mastersystem\Super Wonder Boy.sms
-FileHistory6=data\roms\Sega Mega Drive\Flashback - The Quest for Identity (E) [!].gen
-FileHistory7=data\roms\Sega Mega Drive
-FileHistory8=data\roms\Sega Mega DriveBatman Forever (World).md
-FileHistory9=data\roms\Sega
-FileHistoryA=..\..\data\roms\Sega
-FileHistoryB=data/roms/Sega
-FileHistoryC=data\roms\Sega Mega Drive\Jungle Strike (UE) [!].gen
-FileHistoryD=C:\Users\Sir_Leon\Desktop\RetroPie-Project\Retro-End\repository\data\roms\Sega Mega Drive\Sonic The Hedgehog (W) (REV00) [!].gen
-FileHistoryE=
-FileHistoryF=
+FileHistory1=data\roms\Sega Mega Drive\Lion King, The (W) [!].gen
+FileHistory2=data\roms\Sega Mega Drive
+FileHistory3=data\roms\Sega Mega Drive\International Superstar Soccer Deluxe (E) [!].gen
+FileHistory4=data\roms\Sega Mega Drive\Golden Axe III (J) [!].gen
+FileHistory5=data\roms\Sega Mega Drive\FIFA Soccer 95 (UE) [!].gen
+FileHistory6=data\roms\Sega Mega Drive\Columns (World) (v1.1).md
+FileHistory7=data\roms\Sega Master System
+FileHistory8=data\roms\Sega Mega Drive\Ghostbusters (W) (REV01) [!].gen
+FileHistory9=data\roms\Sega Mega Drive\Flashback - The Quest for Identity (E) [!].gen
+FileHistoryA=data\roms\Sega Mega Drive\Final Fantasy (R).gen
+FileHistoryB=data\roms\Sega Mega Drive\Ghouls 'N Ghosts (UE) (REV01) [!].gen
+FileHistoryC=data\roms\Sega Mega Drive\Micro Machines 2 - Turbo Tournament (E) [c][!].gen
+FileHistoryD=data\roms\Sega Mega Drive\Micro Machines (UE) [c][!].gen
+FileHistoryE=data\roms\Sega Mega Drive\Lion King II, The (Unl) [!].gen
+FileHistoryF=data\roms\Sega Mega Drive\Golden Axe (W) (REV01) [!].gen
 ShortenHistoryNames=0
 
 ;---------------------------------
@@ -147,9 +147,9 @@ SoundSuperHQ=1
 SoundDisabled=0
 SoundFilter=0
 CurrentRenderMode=1
-FullScreen=0
-DWindowXPos=147,2,0,0
-DWindowYPos=203,0,0,0
+FullScreen=1
+DWindowXPos=157,1,0,0
+DWindowYPos=217,0,0,0
 DWindowSize=224,1,128,2
 DResolution=224,1,128,2
 DRenderMode=0
